tests/negative/symbols/recursive.orng
// recursive.orng:6:14: error: use of identifier `x` before its definition
//     let x = x
//             ^
// 
fn main() -> Int  {
    let x = x
    0
}